--- a/MapaGeoJSON.css
+++ b/MapaGeoJSON.css
@@ -1,14 +1,16 @@
-
-       #map {
-        height: 100%;
-        border: thin solid #333;
-        margin: 3em;
-      }
+#map {
+  height: 100%;
+  border: thin solid #333;
+  margin: 3em;
+}
       
-      /* Optional: Makes the sample page fill the window. */
-      html,
-      body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
+/* Optional: Makes the sample page fill the window. */
+html,body {
+  height: 100%;
+  margin: 1em;
+  padding: 0;
+}
+
+.error{
+  color: red;
+}
